--- a/war/pom.xml
+++ b/war/pom.xml
@@ -11,5 +11,36 @@
 
     <artifactId>war</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>domain</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </plugin>
+    </plugins>
+    </build>
 
 </project>
