--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>domain</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
