--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -18,6 +18,10 @@ pipeline {
         }
     }
 
-
+    post {
+        always {
+            junit '**/target/surefire-reports/*.xml'
+        }
+    }
 
 }
