--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>domain</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>api</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
