--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,6 +15,10 @@
             <groupId>com.nullexceptional</groupId>
             <artifactId>service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nullexceptional</groupId>
+            <artifactId>domain</artifactId>
+        </dependency>
     </dependencies>
 
 
